# recipe_api

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  Dockerfile  GEMINI.md  LICENSE  README.md  alembic.ini  crud.py  database.py  docker-compose.yml  generate_openapi.py  logging.ini  main.py  migrate_access.py  models.py  openapi.json  purge_recipes.py  pyproject.toml  requirements.txt  schemas.py  verify_migration.py
.claude/: settings.json  settings.local.json
.gemini/: settings.json
alembic/: env.py
api/: auth.py  recipes.py
app/: crud.py  filters.py  initial_data.py  main.py  models.py  schemas.py  unit_conversion.py
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
db/: README
migration_scripts/: export_mealie_seed.py  food_map.csv  master_migration.py  mealie_client.py  mealie_mapping.py  migrate_access_meals.py  migrate_access_recipes.py  migrate_to_mealie.py  purge_meals.py  purge_recipes.py  unit_map.csv  utils.py
tests/: conftest.py  repro_issue_meals_status.py  test_active_users.py  test_api.py  test_auth.py  test_auth_case_insensitive.py  test_auth_context.py  test_auth_coverage.py  test_circular_dependency.py  test_comments.py  test_delete_restriction.py  test_export_mealie_seed.py  test_filter_by_id.py  test_filtering.py  test_household_api.py  test_household_context.py  test_household_meals.py  test_household_models.py  test_household_schemas.py  test_ingredient_ordering.py  test_lists.py  test_logging_middleware.py  test_meal_authz.py  test_meal_filtering.py  test_meal_headers.py  test_meal_plans.py  (+20 more)
(+52 files in other folders)
