[project]
name = "recipe-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.16.2",
    "fastapi>=0.115.14",
    "pint>=0.24.4",
    "pydantic[email]>=2.11.7",
    "pydantic-settings>=2.12.0",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.21",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.40.0",
    "pwdlib>=0.3.0",
    "bcrypt>=5.0.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pandas>=2.3.3",
    "pytest>=8.3.4",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.13",
]
migration = [
    "pandas>=2.3.3",
]
